# ChangeLog for net-news/liferea
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/ChangeLog,v 1.204 2011/03/21 06:48:52 xarthisius Exp $

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> liferea-1.7.4.ebuild:
  Marked ~ppc64

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> liferea-1.6.5.ebuild:
  ppc/ppc64 stable wrt #355345

  20 Mar 2011; Raúl Porcel <armin76@gentoo.org> liferea-1.6.4.ebuild,
  liferea-1.6.5.ebuild, liferea-1.7.4.ebuild:
  Drop sparc keywords

  09 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> liferea-1.7.4.ebuild,
  +files/liferea-1.7.4-libnotify-0.7.patch:
  Fix building with x11-libs/libnotify >= 0.7 wrt #357691 by Jouni Rinne.

  26 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> liferea-1.6.5.ebuild:
  x86 stable wrt bug #355345

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org> liferea-1.6.5.ebuild:
  Stable on amd64 wrt bug #355345

  11 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> liferea-1.6.4.ebuild:
  ppc stable wrt #338934, keyword ~ppc64 wrt #279241

  04 Jan 2011; Víctor Ostorga <vostorga@gentoo.org> liferea-1.7.4.ebuild:
  Disabling MPROTECT PaX feature to avoid SIGSEGVs on startup, patch thanks
  to Sergei Trofimovich <slyfox@gentoo.org> bug #338213

*liferea-1.6.5 (01 Jan 2011)

  01 Jan 2011; Victor Ostorga <vostorga@gentoo.org> -liferea-1.6.2.ebuild,
  -liferea-1.6.3.ebuild, +liferea-1.6.5.ebuild, -liferea-1.7.1.ebuild,
  -liferea-1.7.2.ebuild, -liferea-1.7.3.ebuild:
  Cleaning up ebuilds. Version bump to 1.6.5 bug #345825

  12 Oct 2010; Raúl Porcel <armin76@gentoo.org> liferea-1.6.4.ebuild:
  sparc stable wrt #338934

  06 Oct 2010; Markus Meier <maekke@gentoo.org> liferea-1.6.4.ebuild:
  x86 stable, bug #338934

  06 Oct 2010; Markos Chandras <hwoarang@gentoo.org> liferea-1.6.4.ebuild:
  Stable on amd64 wrt bug #338934

*liferea-1.6.4 (23 Jul 2010)
