@@ -1,7 +1,7 @@
 AUX liferea-1.7.4-libnotify-0.7.patch 2111 RMD160 ec050f5139747862e30f72992a21121e8f9a889f SHA1 0e7e8b273d45ce76e9cb891d72a59ba6daf67516 SHA256 38e0c25f33dba1a41d71fc19af29b3c7e1ca7e9b429187a4e996e5aa6e70b270
 DIST liferea-1.6.5.tar.gz 1784724 RMD160 77b384595a757983ab9d3f8ed91d824628991670 SHA1 f24dbd0e81c5a8309f0d19853211fc02ff818477 SHA256 3a594bd8acbdcbc236f629f2bee63ffba0ddcc38fb406f8ba89629963a877ebd
 DIST liferea-1.7.4.tar.gz 1682434 RMD160 69103730b26a28e350c6acc65f22561527b45ae8 SHA1 2607aad81b2ada9a932eccd326ad8bbcf1c16986 SHA256 fc91c7453242358fd837da0df591bc7f5d7f3fc99809bf9bf662e8b03dc6f548
-EBUILD liferea-1.6.5.ebuild 1354 RMD160 472966c701fb0c4d9dfc3b01f7b890c048469884 SHA1 eb3027c36cbbfffd80999b65dcb6b79cf580d152 SHA256 f2a5763fc230aef343148f2479893500c658f7936c02c916bcc0e73e1314092b
-EBUILD liferea-1.7.4.ebuild 1566 RMD160 82f73a46c6260058f515b7b914f4d4720921b2ea SHA1 b43fb7cf07fb538abad4deb2a947a6d5018d234f SHA256 d6de9db04d3872e1349518b0d0d0a8b17aa14ee3bb752fc6c733737ca224a36a
-MISC ChangeLog 54802 RMD160 0bb0d4c5536ab28b71bae21052f046336b9f840d SHA1 ea5fcec48cc0fd4e0ce123bae0d54db1d02d807d SHA256 e2fbcea7c53a59412a21904eaa140607c8cbcddc50a18cc2477464ba108a8677
+EBUILD liferea-1.6.5.ebuild 1360 RMD160 43446358ce599b59f02c439fd3c4b61a55873348 SHA1 5c2bfa7592c00cce5150b5a302c92b424655760d SHA256 08a03ec5a356e1e3a6c919afb3c2bd61fd90514174f562aacb9fec3d0ad0ece8
+EBUILD liferea-1.7.4.ebuild 1570 RMD160 273062275ca2cc07b85cb8b6f2aef63f531c2e3a SHA1 b61011a631a113afae285ec5e934c2efd9dba444 SHA256 8a9e0e06f685a65b8741f752dfd539ca442dbba3895b38e3ab4410241ce2dd97
+MISC ChangeLog 54931 RMD160 11b60aae835c61a39066eb42024858335925dbb4 SHA1 3b6b088543156321f1a3fcceeac704f134f81dfb SHA256 c15e7c5e7f84cc147954984c589ce66b65c583ad1dadc22e73f5f0322037670d
 MISC metadata.xml 886 RMD160 ba64859374141ad86c37c94fadcbffc16140f22c SHA1 9743843ba7747f03a6f904005fa4a32a4549a70c SHA256 51069594cb18283ad44cece0027f549c91b67ca9ca3f989d668fc81068aece17
