@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/Attic/liferea-1.6.5.ebuild,v 1.6 2011/03/21 06:45:39 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/Attic/liferea-1.6.5.ebuild,v 1.7 2011/03/21 22:19:53 nirbheek Exp $
 
 EAPI="2"
 GCONF_DEBUG="no"
@@ -21,12 +21,12 @@ RDEPEND=">=x11-libs/gtk+-2.16.0:2
 	>=dev-libs/glib-2.16.0:2
 	>=x11-libs/pango-1.4.0
 	gnome-base/gconf:2
-	>=dev-libs/libxml2-2.6.27
+	>=dev-libs/libxml2-2.6.27:2
 	>=dev-libs/libxslt-1.1.19
 	>=dev-db/sqlite-3.6.10:3
-	>=gnome-base/libglade-2
+	>=gnome-base/libglade-2:2.0
 	>=net-libs/libsoup-2.26.1:2.4
-	>=net-libs/webkit-gtk-1.1.15
+	>=net-libs/webkit-gtk-1.1.15:2
 	libnotify? ( <x11-libs/libnotify-0.7 )
 	lua? ( >=dev-lang/lua-5.1 )
 	dbus? ( >=dev-libs/dbus-glib-0.71 )
