@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/Attic/liferea-1.7.4.ebuild,v 1.5 2011/03/21 06:48:52 xarthisius Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-news/cvs-repo/gentoo-x86/net-news/liferea/Attic/liferea-1.7.4.ebuild,v 1.6 2011/03/21 22:19:52 nirbheek Exp $
 
 EAPI=2
 
@@ -22,12 +22,12 @@ RDEPEND=">=x11-libs/gtk+-2.18.0:2
 	>=dev-libs/glib-2.16.0:2
 	>=x11-libs/pango-1.4.0
 	gnome-base/gconf:2
-	dev-libs/libunique
-	>=dev-libs/libxml2-2.6.27
+	dev-libs/libunique:1
+	>=dev-libs/libxml2-2.6.27:2
 	>=dev-libs/libxslt-1.1.19
 	>=dev-db/sqlite-3.6.10:3
 	>=net-libs/libsoup-2.28.2:2.4
-	>=net-libs/webkit-gtk-1.1.11
+	>=net-libs/webkit-gtk-1.1.11:2
 	libnotify? ( >=x11-libs/libnotify-0.3.2 )
 	dbus? ( >=dev-libs/dbus-glib-0.71 )
 	networkmanager? ( net-misc/networkmanager dev-libs/dbus-glib )"
